nivasa-macros/tests/trybuild/validation_matches_invalid.stderr
error: expected a string field for `#[matches]`
 --> tests/trybuild/validation_matches_invalid.rs:5:5
  |
5 |     #[matches("^[a-z0-9-]+$")]
  |     ^
